--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,42 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import org.controlsfx.control.StatusBar?>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="ファイル">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#onExitMenu" text="閉じる" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <center>
+      <Pane prefHeight="434.0" prefWidth="602.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBtn" text="Button" />
+            <CheckBox fx:id="checkBox1" layoutX="14.0" layoutY="51.0" mnemonicParsing="false" onAction="#checkBoxChanged" text="CheckBox" />
+            <Label fx:id="label1" layoutX="14.0" layoutY="80.0" text="ラベル" />
+            <ToggleButton fx:id="toggle1" layoutX="14.0" layoutY="106.0" mnemonicParsing="false" onAction="#toggleChanged" text="オフ" />
+            <ImageView fx:id="image1" fitHeight="217.0" fitWidth="294.0" layoutX="14.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true" />
+            <Button layoutX="323.0" layoutY="330.0" mnemonicParsing="false" onAction="#onOpenButton" text="開く" />
+         </children>
+      </Pane>
+   </center>
+   <bottom>
+      <StatusBar fx:id="statusText" text="" BorderPane.alignment="CENTER" />
+   </bottom>
+</BorderPane>
